# mcp-server-mock-notify

./: .gitignore  README.md  pyproject.toml  server.py
.devcontainer/: devcontainer.json
server/: .dockerignore  Dockerfile
terraform/: .terraform.lock.hcl  backend.tf  ecr.tf  lambda.tf
