[project]
name = "mcp-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.8.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.9.4",
    "ruff>=0.8.0",
]
